--- a/road-accidents-gb-2005-2015.Rmd
+++ b/road-accidents-gb-2005-2015.Rmd
@@ -1,7 +1,7 @@
 ---
----title: "Road Accidents in Great Britain from 2005 to 2015"
---author: "Aboobacker M"
---date: "16th December 2017"
+title: "Road Accidents in Great Britain from 2005 to 2015"
+author: "Aboobacker M"
+date: "16th December 2017"
 output: ioslides_presentation
 ---
 
